--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container mx-auto px-6 text-center md:start">
             <h2 class="text-3xl font-semibold mb-6 ">Comment ça marche ?</h2>
             <p class="text-lg text-gray-700 max-w-2xl mx-auto">
-                Découvrez comment utiliser notre plateforme en seulement 2 étapes simples pour mieux gérer votre diabète.
+                Découvrez comment utiliser notre plateforme en seulement 3 étapes simples pour mieux gérer votre diabète.
             </p>
     
             <!-- Étapes -->
@@ -127,13 +127,20 @@
                 <!-- Étape 1 -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <div class="text-4xl text-green-700 font-bold mb-4">1</div>
+                    <h3 class="text-xl font-semibold mb-3">Démarrage rapide sur WhatsApp</h3>
+                    <p class="text-gray-600">Cliquez sur le bouton "Démarrer sur WhatsApp" pour commencer votre suivi et avoir un accompagnement sur mésure adapté à votre santé.</p>
+                </div>
+
+                <!-- Étape 2 -->
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <div class="text-4xl text-green-700 font-bold mb-4">2</div>
                     <h3 class="text-xl font-semibold mb-3">Suivi & Accompagnement </h3>
                     <p class="text-gray-600">Enregistrez votre glycémie, recevez des conseils et suivez votre évolution tout en recevant des conseils via  WhatsApp.</p>
                 </div>
     
-                <!-- Étape 2 -->
+                <!-- Étape 3 -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <div class="text-4xl text-green-700 font-bold mb-4">2</div>
+                    <div class="text-4xl text-green-700 font-bold mb-4">3</div>
                     <h3 class="text-xl font-semibold mb-3">Sensibilisation & Communauté</h3>
                     <p class="text-gray-600">Suivez les articles disponibles sur cette plateforme pour vous éduquer sur cette maladie et échangez avec d’autres utilisateurs afin de vous partager vos vécus à travers un groupe WhatsApp .</p>
                 </div>
@@ -234,10 +241,9 @@
                 <div>
                     <h4 class="text-lg font-semibold">Suivez-nous</h4>
                     <div class="flex justify-center space-x-4 mt-2">
-                        <a href="#" class="text-blue-500 text-2xl"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="text-blue-400 text-2xl"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-pink-500 text-2xl"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-blue-600 text-2xl"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/share/1A88RwCKJG/?mibextid=wwXIfr" class="text-blue-500 text-2xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://wa.me/message/BIVDHUO4NN3IH1" class="text-green-400 text-2xl"><i class="fab fa-whatsapp"></i></a>
+                        <a href="#" class="text-white text-2xl"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
