Modification de paragraphes

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <div class="text-4xl text-green-700 font-bold mb-4">2</div>
                     <h3 class="text-xl font-semibold mb-3">Suivi & Accompagnement </h3>
-                    <p class="text-gray-600">Enregistrez votre glycémie, recevez des conseils et suivez votre évolution tout en recevant des conseils via  WhatsApp.</p>
+                    <p class="text-gray-600">Enregistrez votre glycémie, recevez des conseils et suivez votre évolution tout en recevant des rappels de prises de médicaments via WhatsApp.</p>
                 </div>
     
                 <!-- Étape 3 -->
