--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
     </footer>
 
-    <div id="menu" class="bg-orange-500 sticky w-auto top-0 right-0 z-30 h-12/11 p-2">
+    <div id="menu" class="bg-orange-500 fixed w-auto top-0 right-0 z-30 h-12/11 p-2 hidden">
         <div class="flex justify-end ">
             <button id="close"><i class="fa-solid fa-xmark fa-xl" style="color: #02a518ad;"></i></button>
         </div>
