--- a/HTML/sensibilisation.html
+++ b/HTML/sensibilisation.html
@@ -155,7 +155,7 @@
                         sereinement.</p>
                     <button
                         class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                        <a href="https://wa.me/message/BIVDHUO4NN3IH1">
+                        <a href="https://chat.whatsapp.com/Fx5CQCYjzGc2QaEmX9DT9K">
                             Rejoindre <i class="fa-solid fa-arrow-right ml-2"></i>
                         </a>
                     </button>
@@ -227,11 +227,12 @@
                 </div>
                 <div>
                     <h4 class="text-lg font-semibold">Suivez-nous</h4>
-                    <div class="flex justify-center space-x-4 mt-2">
-                        <a href="#" class="text-blue-500 text-2xl"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="text-blue-400 text-2xl"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-pink-500 text-2xl"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-blue-600 text-2xl"><i class="fab fa-linkedin"></i></a>
+                    <div>
+                        <h4 class="text-lg font-semibold">Suivez-nous</h4>
+                        <div class="flex justify-center space-x-4 mt-2">
+                            <a href="https://www.facebook.com/share/1A88RwCKJG/?mibextid=wwXIfr" class="text-blue-500 text-2xl"><i class="fab fa-facebook"></i></a>
+                            <a href="https://whatsapp.com/channel/0029VbA8LRFHAdNXelZbS11k" class="text-green-400 text-2xl"><i class="fab fa-whatsapp"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
