--- a/HTML/sensibilisation.html
+++ b/HTML/sensibilisation.html
@@ -32,7 +32,7 @@
         <div class="space-y-3 hidden md:flex">
             <button
                 class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                <a href="../IMAGES/VitaCare Code QR.png">
+                <a href="https://wa.me/message/BIVDHUO4NN3IH1">
                     <i class="fa-brands fa-whatsapp" style="color: #26a269;"></i> Démarrer sur WhatsApp
                 </a>
             </button>
@@ -49,11 +49,11 @@
         <div class="absolute w-full h-full transition-transform duration-500 ease-in-out opacity-100"
             data-carousel-item="active">
             <img src="https://cdn.pixabay.com/photo/2014/11/12/19/25/diabetes-528678_1280.jpg"
-                class="absolute block w-full h-full object-cover top-0 left-0 md:h-full w-full" alt="diabetes image">
+                class="absolute block w-full h-full object-cover top-0 left-0 md:min-h-screen w-full" alt="diabetes image">
         </div>
         <div class="absolute w-full h-full transition-transform duration-500 ease-in-out opacity-0" data-carousel-item>
             <img src="../IMAGES/WhatsApp Image 2025-03-13 at 10.36.48.jpeg"
-                class="absolute block w-full h-96 object-cover top-0 left-0 md:h-full w-full" alt="Diabetes image">
+                class="absolute block w-full h-96 object-cover top-0 left-0 md:min-h-screen w-full" alt="Diabetes image">
         </div>
     </div>
 
@@ -227,8 +227,6 @@
                 </div>
                 <div>
                     <h4 class="text-lg font-semibold">Suivez-nous</h4>
-                    <div>
-                        <h4 class="text-lg font-semibold">Suivez-nous</h4>
                         <div class="flex justify-center space-x-4 mt-2">
                             <a href="https://www.facebook.com/share/1A88RwCKJG/?mibextid=wwXIfr" class="text-blue-500 text-2xl"><i class="fab fa-facebook"></i></a>
                             <a href="https://whatsapp.com/channel/0029VbA8LRFHAdNXelZbS11k" class="text-green-400 text-2xl"><i class="fab fa-whatsapp"></i></a>
@@ -257,7 +255,7 @@
         <div class="table-fixed md:flex gap-3 px-1">
             <button
                 class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                <a href="../IMAGES/VitaCare Code QR.png">
+                <a href="https://wa.me/message/BIVDHUO4NN3IH1">
                     <i class="fa-brands fa-whatsapp" style="color: #26a269;"></i> Démarrer sur WhatsApp
                 </a>
             </button>
