--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>-->
 
     <!-- Bannière -->
-    <section class="relative w-full min-h-screen pt-28 md:pt-28">
+    <section class="w-full min-h-screen pt-5">
         <div class="w-full h-full">
             <img src="https://scontent.fabj7-1.fna.fbcdn.net/v/t39.30808-6/486067854_122096367776820634_1870853822518726700_n.png?_nc_cat=107&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=6DtezleWX84Q7kNvgG-SHx7&_nc_oc=AdkbIymel8W_YdI0hWCp7qm8VIWvz1EyMQREMigiJrICcPDordXcowRdPBxrBpKIPls&_nc_zt=23&_nc_ht=scontent.fabj7-1.fna&_nc_gid=Fioez4PYU0Hw_RYRkccbkg&oh=00_AYFBMs9yTX9v2zc5MFssK8kcUdWdaYWTpimIHkTP5mWK4A&oe=67EAD219"
                 class="w-full h-full object-cover">
@@ -196,11 +196,11 @@
 
 
     <!-- Contact Section -->
-    <section class=" flex flex-col md:flex-row items-center py-20 h-80">
+    <section class=" flex flex-col md:flex-row items-center py-20 h-80 mb-2">
         <div class="flex-1">
             <img src="https://i.pinimg.com/474x/bc/78/78/bc7878207b5dbb231d315dda225f8786.jpg" alt="" class="w-auto h-auto">
         </div>
-        <div class="flex-1 flex flex-col items-center text-center mb-2">
+        <div class="flex-1 flex flex-col items-center text-center">
             <h1 class="text-orange-400 font-bold text-2xl py-6"><i>Contact avec VitaCare</i></h1>
             <p class="my-4 text-gray-400"><i>Vous souhaitez des informations sur nos services ou des conseils personnalisés ? </i></p>
             <p class="text-gray-400">Contactez via WhatsApp, nous vous contacterons immédiatement.</p>
