--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>-->
 
     <!-- Bannière -->
-    <section class="w-full min-h-screen pt-5">
+    <section class="w-full min-h-screen pt-2">
         <div class="w-full h-full">
             <img src="https://scontent.fabj7-1.fna.fbcdn.net/v/t39.30808-6/486067854_122096367776820634_1870853822518726700_n.png?_nc_cat=107&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=6DtezleWX84Q7kNvgG-SHx7&_nc_oc=AdkbIymel8W_YdI0hWCp7qm8VIWvz1EyMQREMigiJrICcPDordXcowRdPBxrBpKIPls&_nc_zt=23&_nc_ht=scontent.fabj7-1.fna&_nc_gid=Fioez4PYU0Hw_RYRkccbkg&oh=00_AYFBMs9yTX9v2zc5MFssK8kcUdWdaYWTpimIHkTP5mWK4A&oe=67EAD219"
                 class="w-full h-full object-cover">
@@ -62,7 +62,7 @@
     </section>
 
   <!-- Section About -->
-    <section id="about" class="bg-gray-100 py-16 px-5 md:flex md:justify-center md:items-center md:gap-3">
+    <section id="about" class="bg-gray-100 px-5 md:flex md:justify-center md:items-center md:gap-3">
         <!-- Texte -->
         <div class="text-center mr-">
             <h2 class="text-4xl font-semibold mb-6 md:text-start">À Propos de nous</h2>
