--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
   <!-- Section About -->
-    <section id="about" class="bg-gray-100 px-5 md:flex md:justify-center md:items-center md:gap-3">
+    <section id="about" class="bg-gray-100 py-5 px-5 md:flex md:justify-center md:items-center md:gap-3">
         <!-- Texte -->
         <div class="text-center mr-2">
             <h2 class="text-4xl font-semibold mb-6 md:text-start">À Propos de nous</h2>
