--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
     <!-- Contact Section -->
-    <section class=" flex flex-col md:flex-row items-center py-20 h-80 mb-2">
+    <section class=" flex flex-col md:flex-row items-center py-20 h-auto mb-2">
         <div class="flex-1">
             <img src="https://i.pinimg.com/474x/bc/78/78/bc7878207b5dbb231d315dda225f8786.jpg" alt="" class="w-auto h-auto">
         </div>
