--- a/HTML/sensibilisation.html
+++ b/HTML/sensibilisation.html
@@ -32,7 +32,7 @@
         <div class="space-y-3 hidden md:flex">
             <button
                 class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                <a href="https://wa.me/message/BIVDHUO4NN3IH1">
+                <a href="../IMAGES/VitaCare Code QR.png">
                     <i class="fa-brands fa-whatsapp" style="color: #26a269;"></i> Démarrer sur WhatsApp
                 </a>
             </button>
@@ -173,7 +173,7 @@
                     </p>
                     <button
                         class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                        <a href="https://wa.me/message/BIVDHUO4NN3IH1">
+                        <a href="../IMAGES/VitaCare Code QR.png">
                             <i class="fa-solid fa-hand-holding-heart mr-2"></i>Faire un don
                         </a>
                     </button>
@@ -243,26 +243,24 @@
             <button id="close"><i class="fa-solid fa-xmark fa-xl" style="color: #02a518ad;"></i></button>
         </div>
 
-        <nav class="text-white text-2xl p-2 sticky right-0 z-50">
+        <nav class="text-white p-2">
             <ul class="space-y-2">
-                <li><a href="../index.html" class="hover:text-green-700">Accueil</a></li>
-                <li><a href="../index.html#about" class="hover:text-green-700">A Propos</a></li>
-                <li><a href="../index.html#services" class="hover:text-green-700">Services</a></li>
-                <li><a href="../index.html#contact" class="hover:text-green-700">Contact</a></li>
+                <li><a href="index.html" class="hover:text-green-700">Accueil</a></li>
+                <li><a href="#about" class="hover:text-green-700">A Propos</a></li>
+                <li><a href="#services" class="hover:text-green-700">Services</a></li>
+                <li><a href="#contact" class="hover:text-green-700">Contact</a></li>
             </ul>
         </nav>
 
-        <div class="table-fixed md:flex gap-3 px-1">
-            <button
-                class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
-                <a href="https://wa.me/message/BIVDHUO4NN3IH1">
+        <div class="space-y-3">
+            <button class="bg-white text-green-600 text-lg py-4 px-8 rounded-full shadow-md hover:shadow-lg transition duration-300 mt-5">
+                <a href="./IMAGES/VitaCare Code QR.png">
                     <i class="fa-brands fa-whatsapp" style="color: #26a269;"></i> Démarrer sur WhatsApp
                 </a>
             </button>
         </div>
     </div>
-    <script src="./../JS/menu.js"></script>
-
+    <script src="../JS/script.js"></script>
 
 </body>
 
