--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 
         </div>
     
-        <div class="md:w-1/2 flex justify-center mt-8 md:mt-1 pt-1">
+        <div class="md:w-full md:flex md:justify-center md:mt-8 md:mt-1 md:pt-1">
             <img src="./IMAGES/etapes.jpg" alt=""class="rounded-lg shadow-lg max-w-full h-auto">
         </div>
     </section>
@@ -204,7 +204,7 @@
             <p class="my-4 text-gray-400"><i>Vous souhaitez des informations sur nos services ou des conseils personnalisés ? </i></p>
             <p class="text-gray-400">Contactez-nous via WhatsApp, nous vous répondrons immédiatement.</p>
             <button class="border border-green-700 text-green-700 font-bold py-2 px-6 mt-6 flex items-center justify-center">
-                <a href="https://wa.me/message/BIVDHUO4NN3IH1">
+                <a href="./IMAGES/VitaCare Code QR.png">
                     <i class="fa-brands fa-whatsapp mr-2"></i> Contactez-nous
                 </a>
             </button>
