--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- Section Comment ça marche -->
-    <section id="comment-ca-marche" class="bg-gray-100 py-16 md:flex md:justify-center md:items-center">
+    <section id="comment-ca-marche" class="bg-gray-100 py-16 h-auto md:flex md:justify-center md:items-center">
 
             <div class="container mx-auto px-6 text-center md:start">
                 <h2 class="text-3xl font-semibold mb-6 ">Comment ça marche ?</h2>
@@ -156,7 +156,7 @@
             </div>
     
         <div class="md:w-full md:flex md:justify-center md:mt-8 md:mt-1 md:pt-1">
-            <img src="./IMAGES/etapes.jpg" alt=""class="rounded-lg shadow-lg max-w-full h-auto">
+            <img src="./IMAGES/etapes.jpg" alt=""class="rounded-lg shadow-lg max-w-full h-full">
         </div>
     </section>
 
@@ -194,7 +194,7 @@
     <!-- Contact Section -->
     <section class="flex flex-col md:flex-row items-center py-10 h-auto mb-10 max-w-screen-lg mx-auto">
         <div class="flex-1 flex justify-center">
-            <img src="https://i.pinimg.com/474x/bc/78/78/bc7878207b5dbb231d315dda225f8786.jpg" alt="" class="w-full max-w-xs md:max-w-md h-auto">
+            <img src="https://i.pinimg.com/474x/bc/78/78/bc7878207b5dbb231d315dda225f8786.jpg" alt="" class="w-full max-w-xs rounded-lg shadow-lg md:max-w-md h-auto">
         </div>
         <div class="flex-1 flex flex-col items-center text-center px-4">
             <h1 class="text-orange-400 font-bold text-2xl py-6"><i>Contact avec VitaCare</i></h1>
